--- a/mother-theme/src/styles/theme.css
+++ b/mother-theme/src/styles/theme.css
@@ -29,6 +29,7 @@
 @import './theme.badge.css';
 @import './theme.layout.css';
 @import './theme.icon.css';
+@import './theme.utilities.css';
 
 /* ========================================
  * BASE STYLES
